[gd_scene load_steps=3 format=2]

[ext_resource path="res://player/PlayerShip.gd" type="Script" id=1]
[ext_resource path="res://player/player-ship.png" type="Texture" id=2]

[node name="PlayerShip" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 58
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="1"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -26.9057, 10.8257, 28.7658, 9.66592, 11.1365, -1.9323, -17.975, -12.1387, -27.6016, -11.9068 )

[node name="GunSlots" type="Node2D" parent="." index="2"]

[node name="Forward1" type="Position2D" parent="GunSlots" index="0"]

position = Vector2( 27, 9 )
_sections_unfolded = [ "Transform" ]

[node name="Forward2" type="Position2D" parent="GunSlots" index="1"]

position = Vector2( 27, 9 )
_sections_unfolded = [ "Transform" ]

[node name="Backward" type="Position2D" parent="GunSlots" index="2"]

position = Vector2( -24.9393, -0.75762 )

[node name="BombBay" type="Position2D" parent="GunSlots" index="3"]

position = Vector2( -5.2673, 10.2679 )


